# Tiny

./: .gitignore  CMakeLists.txt  README.md  run_with_tests.sh
src/: CMakeLists.txt  main.cpp  parser.cpp  parser.h  pch.h  ssa.cpp  ssa.h  token.cpp  token.h
tests/: CMakeLists.txt  test_common.h  test_parser.cpp  test_parser_basic.cpp  test_parser_complex.cpp  test_parser_intermediate.cpp  test_tokenizer.cpp
tests/basic_tests/: add_with_output.ty  check_inbuilt.ty  just_add.ty  just_multiply.ty  unknown.ty
tests/complex_tests/: add_func.ty  complex.ty  fibonacci.ty  func_2x.ty  gcd.tiny  mandelbrot.tiny  nested_if_while.tny  nested_while.tiny  phi_nesting.ty  simple_func.ty  simple_func2.ty  testComplexVoidCall.txt  while.ty  while_2x.ty  while_if.ty
tests/intermediate_tests/: commutativeCSE.tiny  if.ty  if2.ty  if3.ty  prof_basic.ty
tests/src/: basic.ty  complex.ty  if.ty  triple_add.ty
